--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+
+    "buildCommand": "npm run build --proxy-config proxy.conf.json",
     "routes":[
         {
             "src":"^/api/(.*)$",
