--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "routes":[
         {
             "src":"^/api/(.*)$",
-            "dest":"ec2-18-229-131-240.sa-east-1.compute.amazonaws.com:8080"
+            "dest":"http://ec2-15-228-223-198.sa-east-1.compute.amazonaws.com:8080/"
         }
 
 
