--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "routes":[
         {
             "src":"^/api/(.*)$",
-            "dest":"http://ec2-18-231-72-46.sa-east-1.compute.amazonaws.com/:8080"
+            "dest":"http://ec2-18-231-72-46.sa-east-1.compute.amazonaws.com:8080"
         }
 
 
